fix upvote issue

--- a/UI/meetup-single.html
+++ b/UI/meetup-single.html
@@ -46,8 +46,8 @@
       <span class="text-holder">
         <ul class="details">
           <li>Feb 29 2017</li>
-          <li><a class="upvote" href=""><i class="fas fa-thumbs-up"></i><span class="num"> 100</span></a></li>
-          <li><a class="downvote" href=""><i class="fas fa-thumbs-down"></i><span class="num"> 5</span></a></li>
+          <li><a class="upvote" href="#"><i class="fas fa-thumbs-up"></i><span class="num"> 100</span></a></li>
+          <li><a class="downvote" href="#"><i class="fas fa-thumbs-down"></i><span class="num"> 5</span></a></li>
           <li><a class="comment" href="comment.html"><i class="fas fa-comment"></i> 5</span></a></li>
         </ul>
       </span>
@@ -58,8 +58,8 @@
       <span class="text-holder">
         <ul class="details">
           <li>Feb 29 2017</li>
-          <li><a class="upvote" href=""><i class="fas fa-thumbs-up"></i><span class="num"> 100</span></a></li>
-          <li><a class="downvote" href=""><i class="fas fa-thumbs-down"></i><span class="num"> 5</span></a></li>
+          <li><a class="upvote" href="#"><i class="fas fa-thumbs-up"></i><span class="num"> 100</span></a></li>
+          <li><a class="downvote" href="#"><i class="fas fa-thumbs-down"></i><span class="num"> 5</span></a></li>
           <li><a class="comment" href="comment.html"><i class="fas fa-comment"></i> 5</span></a></li>
         </ul>
       </span>
