--- a/UI/user.html
+++ b/UI/user.html
@@ -30,7 +30,7 @@
   </div>
   <div class="flex full">
     <div class="center no-border">
-      <h1 id="title">Questions</h1>
+      <h1 id="title">Top upcoming meetup(s) Questions</h1>
     </div>
     <div id="questions">
       <h4><a href="">What do i need to do to succeed in the bootcamp</a></h4>
@@ -39,8 +39,8 @@
       <span class="text-holder">
         <ul class="details">
           <li>Feb 29 2017</li>
-          <li><a class="upvote" href=""><i class="fas fa-thumbs-up"></i><span class="num">100</span></a></li>
-          <li><a class="downvote" href=""><i class="fas fa-thumbs-down"></i><span class="num">5</span></a></li>
+          <li><a class="upvote" href="#"><i class="fas fa-thumbs-up"></i><span class="num">100</span></a></li>
+          <li><a class="downvote" href="#"><i class="fas fa-thumbs-down"></i><span class="num">5</span></a></li>
         </ul>
         <a href="comment.html"><button type="button" class="font12 sm">Comments</button></a>
       </span>
