--- a/UI/meetup.html
+++ b/UI/meetup.html
@@ -11,7 +11,7 @@
 <body>
   <header>
     <div class="header">
-      <a href="index.html" class="logo"><img class="image sm" src="image/logo.png"></a>
+      <a href="index.html" class="logo"><img class="image sm" src="image/new_logo.png"></a>
       <a href="" class="show-menu"><i class="fas fa-bars"></i></a>
       <a href="" class="hide-menu"><i class="fas fa-times"></i></a>
       <div class="header-right">
