[Bug #163020672] Update UI template design

--- a/UI/admin.html
+++ b/UI/admin.html
@@ -26,21 +26,27 @@
     </div>
   </header>
   <div class="container" id="create">
-      <label for="topic">Topic</label>
-      <input type="text" id="topic" placeholder="Andela Bootcamp" required>
+      <div class="form-group">
+        <label for="topic">Topic</label>
+        <input type="text" id="topic" placeholder="Andela Bootcamp" required>
+      </div>
 
-      <label for="topic">Location</label>
-      <input type="text" id="location" placeholder="Epic Tower" required>
+      <div class="form-group">
+        <label for="topic">Location</label>
+        <input type="text" id="location" placeholder="Epic Tower" required>
+      </div>
 
-      <label for="topic">Hapening on</label>
-      <input type="date" id="date" placeholder="Epic Tower" required>
+      <div class="form-group">
+        <label for="topic">Hapening on</label>
+        <input type="date" id="date" placeholder="Epic Tower" required>
+      </div>
       
-      <div class="image-upload">
+      <!-- <div class="image-upload">
         <label for="upload">
           <img title="Click to upload a file" src="image/icon.png"/>
         </label>
        <input id="upload" type="file"/>
-      </div>
+      </div> -->
     <img class="image" id="image" src="">
     <button id="btnmeetup" type="submit">Add meetup</button><br/>
     <div class="error font12"></div>
