--- a/UI/comment.html
+++ b/UI/comment.html
@@ -25,8 +25,8 @@
   </header>
   <div class="flex full">
       <div id="question">
-        <h4><a href="meetup-single.html">Andela's Bootcamp</a></h4>
-        <h6 class="font12">@Epic Tower</h6>
+        <h4><a href="meetup-single.html">Meetup: Andela's Bootcamp</a></h4>
+        <h6 class="font12">Location: @Epic Tower</h6>
         <p class="font16">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit quod accusamus repudiandae impedit quasi quidem assumenda consectetur ab, beatae sit ea provident obcaecati, maxime neque ipsa ut sunt consequatur. Tenetur!</p>
         <span class="text-holder">
           <ul class="details font12">
@@ -36,18 +36,21 @@
           <a href="comment.html"><button id="showAddComment" type="button" class="font12 sm">Add Comment</button></a>
         </span>
       </div>
-      <div class="center no-border" ><h1 id="title">Comments</h1></div>
-
-      <div id="comments">
-        <p class="font16"><i class="fas fa-quote-left"></i> &nbsp; Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit quod accusamus repudiandae impedit quasi quidem assumenda consectetur ab, beatae sit ea provident obcaecati, maxime neque ipsa ut sunt consequatur. Tenetur! <i class="fas fa-quote-right"></i></p>
-        <p class="font12">by Akinremi Olumide</p>
-        <span class="text-holder">Feb 29 2017</span>
-        
-        <hr>
-        <p class="font16"><i class="fas fa-quote-left"></i> &nbsp; Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit quod accusamus repudiandae impedit quasi quidem assumenda consectetur ab, beatae sit ea provident obcaecati, maxime neque ipsa ut sunt consequatur. Tenetur! <i class="fas fa-quote-right"></i></p>
-        <p class="font12">by Akinremi Olumide</p>
-        <span class="text-holder">Feb 29 2017</span>
-      </div>
+  </div>
+  <div id="comments" class="flex full flex-buttom-space">
+    <div class="center no-border" >
+      <h1 id="title">Comments</h1>
+    </div>
+    <div>
+      <p class="font16">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit quod accusamus repudiandae impedit quasi quidem assumenda consectetur ab, beatae sit ea provident obcaecati, maxime neque ipsa ut sunt consequatur. Tenetur!</p>
+      <p class="font12">by Akinremi Olumide</p>
+      <span class="text-holder">Feb 29 2017</span>
+    </div>
+    <div>
+      <p class="font16">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit quod accusamus repudiandae impedit quasi quidem assumenda consectetur ab, beatae sit ea provident obcaecati, maxime neque ipsa ut sunt consequatur. Tenetur!</p>
+      <p class="font12">by Akinremi Olumide</p>
+      <span class="text-holder">Feb 29 2017</span>
+    </div>
   </div>
   <div class="container" id="add-comment">
     <label for="title">Comment</label>
