--- a/UI/index.html
+++ b/UI/index.html
@@ -24,39 +24,41 @@
     </div>
   </header>
   <div id="banner">
-  </div>
-  <div class="flex no-border" id="about"> 
-    <div class="no-border">
-      <h1>Need to use Questioner and have to idea of where to start?</h1>
-      <p class="font16 center">
-          At Questioner, we know the importance of Meetups and Questions. That's is why we are here to help you prioritize questions for your meetup
-      </p>
-      <p class="font16 center">
-        With Questioner, you don't need to worry about the trending question/questions for your meetup we already got that covered for you.
-      </p>
-      <form method="post" action="sign-in.html">
-        <button class="md" type="submit">Get Started</button>
-      </form>
-    </div>
-    <div id="contact" class="no-border">
-      <h1>Contact Us</h1>
-      <div class="container sm">
-        <!-- <label for="name">Your Name</label>
-        <input type="text" id="name"> -->
-
-        <label for="email">Your Email</label>
-        <input type="email" id="email">
-
-        <!-- <label for="subject">Subject</label>
-        <input type="text" id="subject"> -->
-
-        <label for="message">Message</label>
-        <textarea id="message"></textarea>
-        <button type="button" class="md" id="send">Send</button>
-        <div class="error font12"></div>
+    <div>
+      <h1>Welcome to Questioner App</h1>
+      <div class="banner-button">
+        <a class="md" href="sign-in.html">Get Started</a>
       </div>
     </div>
   </div>
+    <div class="flex full">
+      <div class="no-border">
+        <h1>Need to use Questioner and have to idea of where to start?</h1>
+        <p class="font16 center">
+            At Questioner, we know the importance of Meetups and Questions. That's is why we are here to help you prioritize questions for your meetup
+        </p>
+        <p class="font16 center">
+          With Questioner, you don't need to worry about the trending question/questions for your meetup we already got that covered for you.
+        </p>
+        <form method="post" action="sign-in.html">
+          <button class="md" type="submit">Get Started</button>
+        </form>
+      </div>
+
+      <br/>
+      <div id="contact" class="no-border">
+          <div class="container sm font16">
+            <h1>Contact Us</h1>
+            <label for="email" class="left">Your Email</label>
+            <input type="email" id="email">
+            
+            <label class="left" for="message">Message</label>
+            <textarea id="message"></textarea>
+            <button type="button" id="send">Send</button>
+            <div class="error font12"></div>
+          </div>
+        </div>
+    </div>
   <p></p>
   <footer>
     <p class="center">© Questioner 2018 | Terms &amp; Conditions | Privacy Policy</p>
