--- a/UI/meetup-single.html
+++ b/UI/meetup-single.html
@@ -23,7 +23,7 @@
       </div>
     </div>
   </header>
-  <div class="flex full">
+  <div class="flex full meetup-card">
     <div id="meetup">
       <img class="image card-image" src="image/andela.jpg">
       <h4><a href="meetup-single.html">Andela's Bootcamp</a></h4>
@@ -36,10 +36,12 @@
         <button type="button" class="font12 sm" id="btnshow">Add Question</button>
       </span>
     </div>
+  </div>
+  <div id="questions" class="flex full flex-buttom-space">
     <div class="center no-border">
       <h1 id="title">Questions</h1>
     </div>
-    <div id="questions">
+    <div>
       <h4><a href="">What do i need to do to succeed in the bootcamp</a></h4>
       <p class="font16">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit quod accusamus repudiandae impedit quasi quidem assumenda consectetur ab, beatae sit ea provident obcaecati, maxime neque ipsa ut sunt consequatur. Tenetur!</p>
       <p class="font16">by Akinremi Olumide</p>
@@ -51,7 +53,8 @@
           <li><a class="comment" href="comment.html"><i class="fas fa-comment"></i> 5</span></a></li>
         </ul>
       </span>
-      <hr>
+    </div>
+    <div>
       <h4><a href="">Please i need to know more about the bootcamp</a></h4>
       <p class="font16">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit quod accusamus repudiandae impedit quasi quidem assumenda consectetur ab, beatae sit ea provident obcaecati, maxime neque ipsa ut sunt consequatur. Tenetur!</p>
       <p class="font16">by Akinremi Olumide</p>
