--- a/UI/meetup.html
+++ b/UI/meetup.html
@@ -23,79 +23,85 @@
       </div>
     </div>
   </header>
-  <div class="flex">
-    <div>
-      <img class="image" src="image/andela.jpg">
-      <h4><a href="meetup-single.html">Andela's Bootcamp</a></h4>
-      <h6>@Epic Tower</h6>
-      <span class="text-holder">
-        <ul class="details">
-          <li>Feb 29 2017</li>
-          <li>30 Questions</li>
-          <li title="view"><a class="view" href="meetup-single.html"><i class="fas fa-eye"></i></a></li>
-        </ul>
-      </span>
-    </div>
-    <div>
-      <img class="image" src="image/andela.jpg">
-      <h4><a href="meetup-single.html">Andela's Bootcamp</a></h4>
-      <h6>@Epic Tower</h6>
-      <span>
-        <ul class="details">
-          <li>Feb 29 2017</li>
-          <li>30 Questions</li>
-          <li title="view"><a class="view" href="meetup-single.html"><i class="fas fa-eye"></i></a></li>
-        </ul>
-      </span>
-    </div>
-    <div>
-      <img class="image" src="image/andela.jpg">
-      <h4><a href="meetup-single.html">Andela's Bootcamp</a></h4>
-      <h6>@Epic Tower</h6>
-      <span>
-        <ul class="details">
-          <li>Feb 29 2017</li>
-          <li>30 Questions</li>
-          <li title="view"><a class="view" href="meetup-single.html"><i class="fas fa-eye"></i></a></li>
-        </ul>
-      </span>
-    </div>
-    <div>
-      <img class="image" src="image/andela.jpg">
-      <h4><a href="meetup-single.html">Andela's Bootcamp</a></h4>
-      <h6>@Epic Tower</h6>
-      <span>
-        <ul class="details">
-          <li>Feb 29 2017</li>
-          <li>30 Questions</li>
-          <li title="view"><a class="view" href="meetup-single.html"><i class="fas fa-eye"></i></a></li>
-        </ul>
-      </span>
-    </div>
-    <div>
-      <img class="image" src="image/andela.jpg">
-      <h4><a href="meetup-single.html">Andela's Bootcamp</a></h4>
-      <h6>@Epic Tower</h6>
-      <span>
-        <ul class="details">
-          <li>Feb 29 2017</li>
-          <li>30 Questions</li>
-          <li title="view"><a class="view" href="meetup-single.html"><i class="fas fa-eye"></i></a></li>
-        </ul>
-      </span>
-    </div>
-    <div>
-      <img class="image" src="image/andela.jpg">
-      <h4><a href="meetup-single.html">Andela's Bootcamp</a></h4>
-      <h6>@Epic Tower</h6>
-      <span>
-        <ul class="details">
-          <li>Feb 29 2017</li>
-          <li>30 Questions</li>
-          <li title="view"><a class="view" href="meetup-single.html"><i class="fas fa-eye"></i></a></li>
-        </ul>
-      </span>
-    </div>
+  <div class="flex meetup-card">
+    <a href="meetup-single.html">
+      <div>
+        <img class="image" src="image/andela.jpg">
+        <h4><a href="meetup-single.html">Andela's Bootcamp</a></h4>
+        <h6>@Epic Tower</h6>
+        <span class="text-holder">
+          <ul class="details">
+            <li>Feb 29 2017</li>
+            <li>30 Questions</li>
+          </ul>
+        </span>
+      </div>
+    </a>
+    <a href="meetup-single.html">
+      <div>
+        <img class="image" src="image/andela.jpg">
+        <h4><a href="meetup-single.html">Andela's Bootcamp</a></h4>
+        <h6>@Epic Tower</h6>
+        <span class="text-holder">
+          <ul class="details">
+            <li>Feb 29 2017</li>
+            <li>30 Questions</li>
+          </ul>
+        </span>
+      </div>
+    </a>
+    <a href="meetup-single.html">
+      <div>
+        <img class="image" src="image/andela.jpg">
+        <h4><a href="meetup-single.html">Andela's Bootcamp</a></h4>
+        <h6>@Epic Tower</h6>
+        <span class="text-holder">
+          <ul class="details">
+            <li>Feb 29 2017</li>
+            <li>30 Questions</li>
+          </ul>
+        </span>
+      </div>
+    </a>
+    <a href="meetup-single.html">
+      <div>
+        <img class="image" src="image/andela.jpg">
+        <h4><a href="meetup-single.html">Andela's Bootcamp</a></h4>
+        <h6>@Epic Tower</h6>
+        <span class="text-holder">
+          <ul class="details">
+            <li>Feb 29 2017</li>
+            <li>30 Questions</li>
+          </ul>
+        </span>
+      </div>
+    </a>
+    <a href="meetup-single.html">
+      <div>
+        <img class="image" src="image/andela.jpg">
+        <h4><a href="meetup-single.html">Andela's Bootcamp</a></h4>
+        <h6>@Epic Tower</h6>
+        <span class="text-holder">
+          <ul class="details">
+            <li>Feb 29 2017</li>
+            <li>30 Questions</li>
+          </ul>
+        </span>
+      </div>
+    </a>
+    <a href="meetup-single.html">
+      <div>
+        <img class="image" src="image/andela.jpg">
+        <h4><a href="meetup-single.html">Andela's Bootcamp</a></h4>
+        <h6>@Epic Tower</h6>
+        <span class="text-holder">
+          <ul class="details">
+            <li>Feb 29 2017</li>
+            <li>30 Questions</li>
+          </ul>
+        </span>
+      </div>
+    </a>
   </div>
   <footer>
     <p class="center">© Questioner 2018 | Terms &amp; Conditions | Privacy Policy</p>
