--- a/UI/sign-in.html
+++ b/UI/sign-in.html
@@ -26,14 +26,17 @@
         <form method="POST" action="user.html">
             <div class="container">
                 <div class="imgcontainer">
-                    <img src="image/avatar.png" alt="Avatar" class="avatar">
+                    <i class="fas fa-user-circle fa-5x"></i>
                 </div>
-                <label for="email">Username or Email</label>
-                <input type="text" id="username" placeholder="JohnDeo" required><br/>
-                
-                <label for="pword">Password</label>
-                <input type="password" id="password" placeholder="Password" required>
-                <div class="left font12"><a href="forget.html">Forget Password</a></div>
+                <div class="form-group">
+                    <label for="email">Username or Email</label>
+                    <input type="text" id="username" placeholder="JohnDeo" required><br/>
+                </div> 
+                <div class="form-group">
+                    <label for="pword">Password</label>
+                    <input type="password" id="password" placeholder="Password" required>
+                </div>
+                <div class="right font12"><a href="forget.html">Forget Password</a></div>
                 <button id="login" type="submit">Sign in</button>
                 <div class="center font12">Don't have an account? <a href="sign-up.html">Sign up</a></div><br/>
                 <div class="error font12">
