--- a/UI/sign-up.html
+++ b/UI/sign-up.html
@@ -26,19 +26,27 @@
         <form action="">
             <div class="container">
                 <div class="imgcontainer">
-                    <img src="image/avatar.png" alt="Avatar" class="avatar">
+                    <i class="fas fa-user-circle fa-5x"></i>
                 </div>
-                <label for="email">Email</label>
-                <input type="email" id="email" placeholder="JohnDeo@gmail.com" required> 
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" placeholder="JohnDeo@gmail.com" required> 
+                </div>
 
-                <label for="username">Username</label>
-                <input type="text" id="username" placeholder="JohnDeo" required> 
+                <div class="form-group">
+                    <label for="username">Username</label>
+                    <input type="text" id="username" placeholder="JohnDeo" required>
+                </div> 
                 
-                <label for="pword">Password</label>
-                <input type="password" id="password" placeholder="Password" required>
+                <div class="form-group">
+                    <label for="pword">Password</label>
+                    <input type="password" id="password" placeholder="Password" required>
+                </div>
 
-                <label for="pword">Retype Password</label>
-                <input type="password" id="confirmpassword" placeholder="Password" required>
+                <div class="form-group">
+                    <label for="pword">Retype Password</label>
+                    <input type="password" id="confirmpassword" placeholder="Password" required>
+                </div>
                 
                 <button id="signup" type="submit">Sign up</button>
                 <div class="center font12">Already have an Account? <a href="sign-in.html">Sign in</a></div><br/>
