--- a/UI/user.html
+++ b/UI/user.html
@@ -28,11 +28,11 @@
     <div><p class="lg font22"><i class="fas fa-comment"> 7 comments</i></p></div>
     <div><p class="lg font22"><i class="fas fa-users"> 7 upcoming meetups</i></p></div>
   </div>
-  <div class="flex full">
+  <div class="flex full flex-buttom-space">
     <div class="center no-border">
       <h1 id="title">Top upcoming meetup(s) Questions</h1>
     </div>
-    <div id="questions">
+    <div>
       <h4><a href="">What do i need to do to succeed in the bootcamp</a></h4>
       <p class="font16">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit quod accusamus repudiandae impedit quasi quidem assumenda consectetur ab, beatae sit ea provident obcaecati, maxime neque ipsa ut sunt consequatur. Tenetur!</p>
       <p class="font16">by Akinremi Olumide</p>
@@ -44,7 +44,8 @@
         </ul>
         <a href="comment.html"><button type="button" class="font12 sm">Comments</button></a>
       </span>
-      <hr>
+    </div>
+    <div>
       <h4><a href="">Please i need to know more about the bootcamp</a></h4>
       <p class="font16">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit quod accusamus repudiandae impedit quasi quidem assumenda consectetur ab, beatae sit ea provident obcaecati, maxime neque ipsa ut sunt consequatur. Tenetur!</p>
       <p class="font16">by Akinremi Olumide</p>
