[Bug #163020672] Change landing page image and about us message in a single paragraph

--- a/UI/index.html
+++ b/UI/index.html
@@ -35,10 +35,8 @@
       <div class="no-border">
         <h1>Need to use Questioner and have to idea of where to start?</h1>
         <p class="font16 center">
-            At Questioner, we know the importance of Meetups and Questions. That's is why we are here to help you prioritize questions for your meetup
-        </p>
-        <p class="font16 center">
-          With Questioner, you don't need to worry about the trending question/questions for your meetup we already got that covered for you.
+            At Questioner, we know the importance of Meetups and Questions. That's is why we are here to help you prioritize questions for your meetup.
+            With Questioner, you don't need to worry about the trending question/questions for your meetup we already got that covered for you.
         </p>
         <form method="post" action="sign-in.html">
           <button class="md" type="submit">Get Started</button>
