[Bug #163020672] re-design card layout

--- a/UI/comment.html
+++ b/UI/comment.html
@@ -24,7 +24,7 @@
     </div>
   </header>
   <div class="flex full">
-      <div id="question">
+      <div id="question" class="space">
         <h4><a href="meetup-single.html">Meetup: Andela's Bootcamp</a></h4>
         <h6 class="font12">Location: @Epic Tower</h6>
         <p class="font16">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit quod accusamus repudiandae impedit quasi quidem assumenda consectetur ab, beatae sit ea provident obcaecati, maxime neque ipsa ut sunt consequatur. Tenetur!</p>
@@ -41,12 +41,12 @@
     <div class="center no-border" >
       <h1 id="title">Comments</h1>
     </div>
-    <div>
+    <div class="space">
       <p class="font16">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit quod accusamus repudiandae impedit quasi quidem assumenda consectetur ab, beatae sit ea provident obcaecati, maxime neque ipsa ut sunt consequatur. Tenetur!</p>
       <p class="font12">by Akinremi Olumide</p>
       <span class="text-holder">Feb 29 2017</span>
     </div>
-    <div>
+    <div class="space">
       <p class="font16">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit quod accusamus repudiandae impedit quasi quidem assumenda consectetur ab, beatae sit ea provident obcaecati, maxime neque ipsa ut sunt consequatur. Tenetur!</p>
       <p class="font12">by Akinremi Olumide</p>
       <span class="text-holder">Feb 29 2017</span>
