--- a/UI/meetup-single.html
+++ b/UI/meetup-single.html
@@ -41,7 +41,7 @@
     <div class="center no-border">
       <h1 id="title">Questions</h1>
     </div>
-    <div>
+    <div class="space">
       <h4><a href="">What do i need to do to succeed in the bootcamp</a></h4>
       <p class="font16">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit quod accusamus repudiandae impedit quasi quidem assumenda consectetur ab, beatae sit ea provident obcaecati, maxime neque ipsa ut sunt consequatur. Tenetur!</p>
       <p class="font16">by Akinremi Olumide</p>
@@ -54,7 +54,7 @@
         </ul>
       </span>
     </div>
-    <div>
+    <div class="space">
       <h4><a href="">Please i need to know more about the bootcamp</a></h4>
       <p class="font16">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit quod accusamus repudiandae impedit quasi quidem assumenda consectetur ab, beatae sit ea provident obcaecati, maxime neque ipsa ut sunt consequatur. Tenetur!</p>
       <p class="font16">by Akinremi Olumide</p>
