[Chore] implement feedback from LFA

--- a/UI/admin.html
+++ b/UI/admin.html
@@ -40,96 +40,95 @@
         <label for="topic">Hapening on</label>
         <input type="date" id="date" placeholder="Epic Tower" required>
       </div>
-      
-      <!-- <div class="image-upload">
-        <label for="upload">
-          <img title="Click to upload a file" src="image/icon.png"/>
-        </label>
-       <input id="upload" type="file"/>
-      </div> -->
     <img class="image" id="image" src="">
     <button id="btnmeetup" type="submit">Add meetup</button><br/>
     <div class="error font12"></div>
   </div>
   <div class="flex" id="meetups">
-    <div>
-      <img class="image" src="image/andela.jpg">
-      <h4><a href="meetup-single.html">Andela's Bootcamp</a></h4>
-      <h6 class="font12">@Epic Tower</h6>
-      <span class="text-holder">
-        <ul class="details font12">
-          <li>Feb 29 2017</li>
-          <li>30 Questions</li>
-          <li title="view"><a class="view" href="meetup-single.html"><i class="fas fa-eye"></i></a></li>
-          <li title="delete"><a href="" class="delete"><i class="fas fa-trash"></i></a></li>
-        </ul>
-      </span>
-    </div>
-    <div>
-      <img class="image" src="image/andela.jpg">
-      <h4><a href="meetup-single.html">Andela's Bootcamp</a></h4>
-      <h6 class="font12">@Epic Tower</h6>
-      <span class="text-holder">
-        <ul class="details font12">
-          <li>Feb 29 2017</li>
-          <li>30 Questions</li>
-          <li title="view"><a class="view" href="meetup-single.html"><i class="fas fa-eye"></i></a></li>
-          <li title="delete"><a href="" class="delete"><i class="fas fa-trash"></i></a></li>
-        </ul>
-      </span>
-    </div>
-    <div>
-      <img class="image" src="image/andela.jpg">
-      <h4><a href="meetup-single.html">Andela's Bootcamp</a></h4>
-      <h6 class="font12">@Epic Tower</h6>
-      <span class="text-holder">
-        <ul class="details font12">
-          <li>Feb 29 2017</li>
-          <li>30 Questions</li>
-          <li title="view"><a class="view" href="meetup-single.html"><i class="fas fa-eye"></i></a></li>
-          <li title="delete"><a href="" class="delete"><i class="fas fa-trash"></i></a></li>
-        </ul>
-      </span>
-    </div>
-    <div>
-      <img class="image" src="image/andela.jpg">
-      <h4><a href="meetup-single.html">Andela's Bootcamp</a></h4>
-      <h6 class="font12">@Epic Tower</h6>
-      <span class="text-holder">
-        <ul class="details font12">
-          <li>Feb 29 2017</li>
-          <li>30 Questions</li>
-          <li title="view"><a class="view" href="meetup-single.html"><i class="fas fa-eye"></i></a></li>
-          <li title="delete"><a href="" class="delete"><i class="fas fa-trash"></i></a></li>
-        </ul>
-      </span>
-    </div>
-    <div>
-      <img class="image" src="image/andela.jpg">
-      <h4><a href="meetup-single.html">Andela's Bootcamp</a></h4>
-      <h6 class="font12">@Epic Tower</h6>
-      <span class="text-holder">
-        <ul class="details font12">
-          <li>Feb 29 2017</li>
-          <li>30 Questions</li>
-          <li title="view"><a class="view" href="meetup-single.html"><i class="fas fa-eye"></i></a></li>
-          <li title="delete"><a href="" class="delete"><i class="fas fa-trash"></i></a></li>
-        </ul>
-      </span>
-    </div>
-    <div>
-      <img class="image" src="image/andela.jpg">
-      <h4><a href="meetup-single.html">Andela's Bootcamp</a></h4>
-      <h6 class="font12">@Epic Tower</h6>
-      <span class="text-holder">
-        <ul class="details font12">
-          <li>Feb 29 2017</li>
-          <li>30 Questions</li>
-          <li title="view"><a class="view" href="meetup-single.html"><i class="fas fa-eye"></i></a></li>
-          <li title="delete"><a href="" class="delete"><i class="fas fa-trash"></i></a></li>
-        </ul>
-      </span>
-    </div>
+    <a href="meetup-single.html">
+      <div>
+        <img class="image" src="image/andela.jpg">
+        <h4><a href="meetup-single.html">Andela's Bootcamp</a></h4>
+        <h6 class="font12">@Epic Tower</h6>
+        <span class="text-holder">
+          <ul class="details font12">
+            <li>Feb 29 2017</li>
+            <li>30 Questions</li>
+            <li title="delete"><a href="" class="delete"><i class="fas fa-trash"></i></a></li>
+          </ul>
+        </span>
+      </div>
+    </a>
+    <a href="meetup-single.html">
+      <div>
+        <img class="image" src="image/andela.jpg">
+        <h4><a href="meetup-single.html">Andela's Bootcamp</a></h4>
+        <h6 class="font12">@Epic Tower</h6>
+        <span class="text-holder">
+          <ul class="details font12">
+            <li>Feb 29 2017</li>
+            <li>30 Questions</li>
+            <li title="delete"><a href="" class="delete"><i class="fas fa-trash"></i></a></li>
+          </ul>
+        </span>
+      </div>
+    </a>
+    <a href="meetup-single.html">
+      <div>
+        <img class="image" src="image/andela.jpg">
+        <h4><a href="meetup-single.html">Andela's Bootcamp</a></h4>
+        <h6 class="font12">@Epic Tower</h6>
+        <span class="text-holder">
+          <ul class="details font12">
+            <li>Feb 29 2017</li>
+            <li>30 Questions</li>
+            <li title="delete"><a href="" class="delete"><i class="fas fa-trash"></i></a></li>
+          </ul>
+        </span>
+      </div>
+    </a>
+    <a href="meetup-single.html">
+      <div>
+        <img class="image" src="image/andela.jpg">
+        <h4><a href="meetup-single.html">Andela's Bootcamp</a></h4>
+        <h6 class="font12">@Epic Tower</h6>
+        <span class="text-holder">
+          <ul class="details font12">
+            <li>Feb 29 2017</li>
+            <li>30 Questions</li>
+            <li title="delete"><a href="" class="delete"><i class="fas fa-trash"></i></a></li>
+          </ul>
+        </span>
+      </div>
+    </a>
+    <a href="meetup-single.html">
+      <div>
+        <img class="image" src="image/andela.jpg">
+        <h4><a href="meetup-single.html">Andela's Bootcamp</a></h4>
+        <h6 class="font12">@Epic Tower</h6>
+        <span class="text-holder">
+          <ul class="details font12">
+            <li>Feb 29 2017</li>
+            <li>30 Questions</li>
+            <li title="delete"><a href="" class="delete"><i class="fas fa-trash"></i></a></li>
+          </ul>
+        </span>
+      </div>
+    </a>
+    <a href="meetup-single.html">
+      <div>
+        <img class="image" src="image/andela.jpg">
+        <h4><a href="meetup-single.html">Andela's Bootcamp</a></h4>
+        <h6 class="font12">@Epic Tower</h6>
+        <span class="text-holder">
+          <ul class="details font12">
+            <li>Feb 29 2017</li>
+            <li>30 Questions</li>
+            <li title="delete"><a href="" class="delete"><i class="fas fa-trash"></i></a></li>
+          </ul>
+        </span>
+      </div>
+    </a>
   </div>
   <footer>
     <p class="center">© Questioner 2018 | Terms &amp; Conditions | Privacy Policy</p>
