--- a/UI/forget.html
+++ b/UI/forget.html
@@ -27,7 +27,9 @@
             <div class="container">
                 <label for="email">Email</label>
                 <input id="email" type="email" placeholder="JohnDeo@gmail.com" required><br/>
-                <button id="forget" type="submit">Sign in</button>
+                <a href="sign-in.html">
+                    <button id="forget" type="submit">Sign in</button>
+                </a>
                 <div class="error font12">
                 </div>
             </div>
