--- a/UI/index.html
+++ b/UI/index.html
@@ -37,7 +37,7 @@
         <p class="font16 center">At Questioner, we know the importance of Meetups and Questions. That's is why we are here to help you       prioritize questions for your meetup.
             With Questioner, you don't need to worry about the trending question/questions for your meetup we already got that covered for you.
          </p>
-        <form method="post" action="sign-in.html">
+        <form action="sign-in.html">
           <button class="md" type="submit">Get Started</button>
         </form>
       </div>
