--- a/UI/sign-up.html
+++ b/UI/sign-up.html
@@ -23,7 +23,7 @@
                 </div>
             </div>
         </header>
-        <form action="">
+        <form action="user.html">
             <div class="container">
                 <div class="imgcontainer">
                     <i class="fas fa-user-circle fa-5x"></i>
@@ -48,7 +48,7 @@
                     <input type="password" id="confirmpassword" placeholder="Password" required>
                 </div>
                 
-                <button id="signup" type="submit">Sign up</button>
+                <a href="user.html"><button id="signup" type="button">Sign up</button></a>
                 <div class="center font12">Already have an Account? <a href="sign-in.html">Sign in</a></div><br/>
                 <div class="error font12">
                 </div>
