--- a/UI/sign-in.html
+++ b/UI/sign-in.html
@@ -19,25 +19,27 @@
                     <a href="index.html#contact">Contact</a>
                     <a href="index.html#about">About</a>
                     <a href="meetup.html">Meetups</a>
-                    <a class="active" href="sign-in.html">Sign in</a>
+                    <a class="active" href="admin.html">Sign in</a>
                 </div>
             </div>
         </header>
-        <form method="POST" action="user.html">
+        <form action="admin.html">
             <div class="container">
                 <div class="imgcontainer">
                     <i class="fas fa-user-circle fa-5x"></i>
                 </div>
                 <div class="form-group">
                     <label for="email">Username or Email</label>
-                    <input type="text" id="username" placeholder="JohnDeo" required><br/>
+                    <input type="text" id="username" placeholder="JohnDeo" value="andela" required><br/>
                 </div> 
                 <div class="form-group">
                     <label for="pword">Password</label>
-                    <input type="password" id="password" placeholder="Password" required>
+                    <input type="password" id="password" placeholder="Password" value="testing" required>
                 </div>
                 <div class="right font12"><a href="forget.html">Forget Password</a></div>
-                <button id="login" type="submit">Sign in</button>
+                <a href="admin.html">
+                    <button id="login" type="submit">Sign in</button>
+                </a>
                 <div class="center font12">Don't have an account? <a href="sign-up.html">Sign up</a></div><br/>
                 <div class="error font12">
                 </div>
