[Chore #163316011] implement feedback from LFA

--- a/UI/meetup-single.html
+++ b/UI/meetup-single.html
@@ -16,14 +16,12 @@
       <a href="" class="hide-menu"><i class="fas fa-times"></i></a>
       <div class="header-right">
         <a href=""></a>
-        <a href="index.html#contact">Contact</a>
-        <a href="index.html#about">About</a>
         <a class="active" href="meetup.html">Meetups</a>
         <a href="user.html">Dashboard</a>
       </div>
     </div>
   </header>
-  <div class="flex full meetup-card">
+  <div class="flex full no-pad">
     <div id="meetup">
       <img class="image card-image" src="image/andela.jpg">
       <h4><a href="meetup-single.html">Andela's Bootcamp</a></h4>
