--- a/UI/admin.html
+++ b/UI/admin.html
@@ -13,18 +13,21 @@
 <body>
   <header>
     <div class="header">
-      <a href="" class="logo"><img class="image sm" src="image/new_logo.png" alt="Company Logo"></a>
+      <a href="index.html" class="logo"><img class="image sm" src="image/new_logo.png" alt="Company Logo"></a>
       <a href="" class="show-menu"><i class="fas fa-bars"></i></a>
       <a href="" class="hide-menu"><i class="fas fa-times"></i></a>
       <div class="header-right">
         <a href=""></a>
-        <a href="index.html#contact">Contact</a>
-        <a href="index.html#about">About</a>
         <a id="linkMeetups" href="#">All meetups</a>
         <a class="active" id="dashboard" href="#Dashboard">Dashboard</a>
       </div>
     </div>
   </header>
+  <div class="flex">
+    <div><p class="lg font22"><i class="fas fa-user-plus"> Total Meetups<br/>20</i></p></div>
+    <div><p class="lg font22"><i class="fas fa-comment"> Total comments<br/>40</i></p></div>
+    <div><p class="lg font22"><i class="fas fa-users"> Total Questions <br/>30</i></p></div>
+  </div>
   <div class="container" id="create">
       <div class="form-group">
         <label for="topic">Topic</label>
@@ -44,7 +47,7 @@
     <button id="btnmeetup" type="submit">Add meetup</button><br/>
     <div class="error font12"></div>
   </div>
-  <div class="flex" id="meetups">
+  <div class="flex meetup-card" id="meetups">
     <a href="meetup-single.html">
       <div>
         <img class="image" src="image/andela.jpg">
