[Chore #163316011] implement feedback from LFA

--- a/UI/admin.html
+++ b/UI/admin.html
@@ -24,9 +24,9 @@
     </div>
   </header>
   <div class="flex">
-    <div><p class="lg font22"><i class="fas fa-user-plus"> Total Meetups<br/>20</i></p></div>
-    <div><p class="lg font22"><i class="fas fa-comment"> Total comments<br/>40</i></p></div>
-    <div><p class="lg font22"><i class="fas fa-users"> Total Questions <br/>30</i></p></div>
+    <div><p class="lg font22"><i class="fas fa-user-plus"> All Meetups<br/>20</i></p></div>
+    <div><p class="lg font22"><i class="fas fa-comment"> All comments<br/>40</i></p></div>
+    <div><p class="lg font22"><i class="fas fa-users"> All Questions <br/>30</i></p></div>
   </div>
   <div class="container" id="create">
       <div class="form-group">
