[Feature #163523918] Implement Fetch Api for signup page

--- a/UI/sign-up.html
+++ b/UI/sign-up.html
@@ -23,7 +23,7 @@
                 </div>
             </div>
         </header>
-        <form method="POST" action="user.html">
+        <form method="POST">
             <div class="container">
                 <div class="imgcontainer">
                     <i class="fas fa-user-circle fa-5x"></i>
