[Feature #163538813] implemet Fetch Api for login page

--- a/UI/comment.html
+++ b/UI/comment.html
@@ -18,7 +18,7 @@
         <a href=""></a>
         <a href="index.html#contact">Contact</a>
         <a href="index.html#about">About</a>
-        <a href="meetup.html">Meetups</a>
+        <a href="meetups.html">Meetups</a>
         <a class="active" href="user.html">Dashboard</a>
       </div>
     </div>
