--- a/UI/index.html
+++ b/UI/index.html
@@ -18,8 +18,8 @@
         <a href=""></a>
         <a href="index.html#contact">Contact</a>
         <a href="index.html#about">About</a>
-        <a href="meetup.html">Meetups</a>
-        <a class="active" href="sign-in.html">Sign in</a>
+        <a href="meetups.html">Meetups</a>
+        <a class="active" href="login.html">Sign in</a>
       </div>
     </div>
   </header>
@@ -27,7 +27,7 @@
     <div>
       <h1>Welcome to Questioner App</h1>
       <div class="banner-button">
-        <a class="md" href="sign-in.html">Get Started</a>
+        <a class="md" href="login.html">Get Started</a>
       </div>
     </div>
   </div>
@@ -37,7 +37,7 @@
         <p class="font16 center">At Questioner, we know the importance of Meetups and Questions. That's is why we are here to help you       prioritize questions for your meetup.
             With Questioner, you don't need to worry about the trending question/questions for your meetup we already got that covered for you.
          </p>
-        <form action="sign-in.html">
+        <form action="login.html">
           <button class="md" type="submit">Get Started</button>
         </form>
       </div>
