--- a/UI/meetup-single.html
+++ b/UI/meetup-single.html
@@ -16,7 +16,7 @@
       <a href="" class="hide-menu"><i class="fas fa-times"></i></a>
       <div class="header-right">
         <a href=""></a>
-        <a class="active" href="meetup.html">Meetups</a>
+        <a class="active" href="meetups.html">Meetups</a>
         <a href="user.html">Dashboard</a>
       </div>
     </div>
