--- a/UI/forget.html
+++ b/UI/forget.html
@@ -18,8 +18,8 @@
                     <a href=""></a>
                     <a href="index.html#contact">Contact</a>
                     <a href="index.html#about">About</a>
-                    <a href="meetup.html">Meetups</a>
-                    <a class="active" href="sign-in.html">Sign in</a>
+                    <a href="meetups.html">Meetups</a>
+                    <a class="active" href="login.html">Sign in</a>
                 </div>
             </div>
         </header>
@@ -27,7 +27,7 @@
             <div class="container">
                 <label for="email">Email</label>
                 <input id="email" type="email" placeholder="JohnDeo@gmail.com" required><br/>
-                <a href="sign-in.html">
+                <a href="login.html">
                     <button id="forget" type="submit">Sign in</button>
                 </a>
                 <div class="error font12">
