--- a/UI/login.html
+++ b/UI/login.html
@@ -6,6 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Questioner | Signin Form</title>
         <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="css/loader.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
     </head>
     <body>
@@ -18,37 +19,43 @@
                     <a href=""></a>
                     <a href="index.html#contact">Contact</a>
                     <a href="index.html#about">About</a>
-                    <a href="meetup.html">Meetups</a>
-                    <a class="active" href="admin.html">Sign in</a>
+                    <a href="meetups.html">Meetups</a>
+                    <a class="active" href="">login</a>
                 </div>
             </div>
         </header>
-        <form action="admin.html">
+        <div id="overlay">
+            <div id="loader"></div>
+        </div>
+        <form method="POST">
             <div class="container">
+                <div class="alert">
+                    <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
+                    <span class="error"></span>
+                </div>
                 <div class="imgcontainer">
                     <i class="fas fa-user-circle fa-5x"></i>
                 </div>
                 <div class="form-group">
                     <label for="email">Username or Email</label>
-                    <input type="text" id="username" placeholder="JohnDeo" value="andela" required><br/>
+                    <input type="text" id="username" placeholder="JohnDeo" required><br/>
                 </div> 
                 <div class="form-group">
                     <label for="pword">Password</label>
-                    <input type="password" id="password" placeholder="Password" value="testing" required>
+                    <input type="password" id="password" placeholder="Password" required>
                 </div>
                 <div class="right font12"><a href="forget.html">Forget Password</a></div>
                 <a href="admin.html">
                     <button id="login" type="submit">Sign in</button>
                 </a>
                 <div class="center font12">Don't have an account? <a href="sign-up.html">Sign up</a></div><br/>
-                <div class="error font12">
                 </div>
             </div>
         </form>
         <footer>
             <p class="center">© Questioner 2018 | Terms &amp; Conditions | Privacy Policy</p>
         </footer>
-        <script src="js/signin.js"></script>
+        <script src="js/login.js"></script>
         <script src="js/index.js"></script>
     </body>
 </html>
