--- a/UI/meetups.html
+++ b/UI/meetups.html
@@ -21,8 +21,8 @@
         <a href=""></a>
         <a href="index.html#contact">Contact</a>
         <a href="index.html#about">About</a>
-        <a class="active" href="meetup.html">Meetups</a>
-        <a href="sign-in.html">Sign in</a>
+        <a href="meetups.html">Meetups</a>
+        <a class="active" href="login.html">Sign in</a>
       </div>
     </div>
   </header>
