--- a/UI/user.html
+++ b/UI/user.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Questioner | User-Dashboard</title>
-  <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
 </head>
 <body>
@@ -16,7 +16,7 @@
         <a href="" class="hide-menu"><i class="fas fa-times"></i></a>
         <div class="header-right">
           <a href=""></a>
-          <a href="meetup.html">meetups</a>
+          <a href="meetups.html">meetups</a>
           <a class="active" id="dashboard" href="">Dashboard</a>
         </div>
       </div>
